[package]
name = "starpod"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Starpod CLI - personal AI assistant"

[[bin]]
name = "starpod"
path = "src/main.rs"

[features]
default = ["embeddings"]
embeddings = ["starpod-agent/embeddings"]
secret-proxy = ["starpod-agent/secret-proxy", "starpod-vault/secret-proxy"]
secret-proxy-netns = ["secret-proxy", "starpod-agent/secret-proxy-netns"]

[dependencies]
agent-sdk = { workspace = true }
starpod-core = { workspace = true }
starpod-agent = { workspace = true }
starpod-gateway = { workspace = true }
starpod-cron = { workspace = true }
starpod-db = { workspace = true }
starpod-vault = { workspace = true }
starpod-instances = { workspace = true }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "15"
colored = "3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
dirs = "6"
open = "5"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
serde_json = "1"
